refactor(cli): update component installation commands to use json urls
Change command format from direct component names to json urls for consistency
Update documentation and registry to reflect new command format

--- a/src/content/docs/CLI.mdx
+++ b/src/content/docs/CLI.mdx
@@ -8,7 +8,7 @@ description: Use the shadcn CLI to add SoldevKit UI components to your project.
 Add components to your project using the shadcn CLI:
 
 ```bash
-npx shadcn@latest add https://soldevkit.com/r/copy-button.json
+npx shadcn@latest add https://soldevkit.com/r/(component-name).json
 ```
 
 ### Examples
@@ -22,6 +22,7 @@ pnpm dlx shadcn@latest add https://soldevkit.com/r/copy-button.json
 ```
 
 That's it! The CLI will automatically:
+
 - Copy the component files to your project
 - Install required dependencies
 - Configure TypeScript types
