feat(wallet): add wallet connect button component with dialog and state management
refactor(components): reorganize component structure and update dependencies
docs(wallet): update wallet component documentation with usage examples
style: clean up formatting and remove unused components
build: add new dependencies for wallet functionality

--- a/src/content/docs/CLI.mdx
+++ b/src/content/docs/CLI.mdx
@@ -17,8 +17,12 @@ npx shadcn@latest add https://soldevkit.com/r/(component-name).json
 # Add the copy button component
 npx shadcn@latest add https://soldevkit.com/r/copy-button.json
 
+# Add the wallet connect button component
+npx shadcn@latest add https://soldevkit.com/r/wallet-connect-button.json
+
 # Using pnpm
 pnpm dlx shadcn@latest add https://soldevkit.com/r/copy-button.json
+pnpm dlx shadcn@latest add https://soldevkit.com/r/wallet-connect-button.json
 ```
 
 That's it! The CLI will automatically:
