--- a/src/content/docs/components/wallet.mdx
+++ b/src/content/docs/components/wallet.mdx
@@ -15,7 +15,7 @@ author:
 ## Usage
 
 ```tsx
-import { WalletConnectButton } from '@/components/soldevkit-ui/wallet/wallet-connect-button';
+import { WalletConnectButton } from "@/components/soldevkit-ui/wallet/wallet-connect-button";
 
 export default function Example() {
   return (
@@ -97,7 +97,7 @@ const customLabels = {
   "no-wallet": "Select Wallet",
 };
 
-<WalletConnectButton labels={customLabels} />
+<WalletConnectButton labels={customLabels} />;
 ```
 
 ## Wallet States
