--- a/src/content/docs/introduction.mdx
+++ b/src/content/docs/introduction.mdx
@@ -38,16 +38,15 @@ Forget about building everything from scratch. With SoldevKit UI, you can focus 
 
 Join our growing community to ask questions, share your projects, or just hang out with other Solana developers.
 
-- **Discord:** [Join our Discord Server](https://discord.gg/your-invite-link)
-- **GitHub:** [Discussions & Issues](https://github.com/your-repo/soldevkit-ui/discussions)
-- **X (Twitter):** [Follow us @YourTwitterHandle](https://twitter.com/YourTwitterHandle)
+- **GitHub:** [Discussions & Issues](https://github.com/satyawaniaman/soldevkit-ui/discussions)
+- **X (Twitter):** [Follow us @satyawaniaman](https://twitter.com/satyawaniaman)
 
 ### Contributing
 
 SoldevKit UI is a community project, and we welcome contributions of all kinds! Whether you're fixing a bug, adding a new component, or improving the documentation, your help is appreciated.
 
-Please read our **[Contribution Guidelines](https://github.com/your-repo/soldevkit-ui/blob/main/CONTRIBUTING.md)** to get started.
+Please read our **[Contribution Guidelines](https://github.com/satyawaniaman/soldevkit-ui/blob/main/CONTRIBUTING.md)** to get started.
 
 <Callout title="Ready to build?" type="info">
-  Head over to the [Installation](/docs/installation) page to get started.
+  Head over to the [CLI](/docs/CLI) page to get started with installation.
 </Callout>
