feat(components): add NFT and token image components with demo examples
feat(swap): implement token swap interface with wallet integration

docs: update component documentation with new features and examples

chore: remove unused three.js dependency from package.json

refactor: improve wallet connect button demo layout and styling

--- a/src/content/docs/components/pk-input.mdx
+++ b/src/content/docs/components/pk-input.mdx
@@ -1,5 +1,5 @@
 ---
-title: PKInput
+title: Public Key Input
 description: A specialized input component for Solana public keys with built-in validation and error handling.
 author:
   name: Aman Satyawani
