--- a/src/content/docs/components/txn-list.mdx
+++ b/src/content/docs/components/txn-list.mdx
@@ -1,22 +1,18 @@
 ---
 title: Transaction List
 description: A component for displaying a list of Solana transactions with details like signature, block, time, sender, and fee.
+author:
+  name: SolDevKit Team
+  url: https://github.com/soldevkit
 ---
 
-## Preview
+<ComponentPreview name="txn-list-demo" />
 
-    <ComponentPreview name="txn-list-demo" />
+# Transaction List
+
+A component for displaying a list of Solana transactions with details like signature, block, time, sender, and fee.
 
 ## Installation
-
-### CLI
-
-<Tabs items={["npm", "pnpm"]}>
-  <Tab>```sh npx shadcn@latest add https://soldevkit.com/r/txn-list.json ```</Tab>
-  <Tab>```sh pnpm dlx shadcn@latest add https://soldevkit.com/r/txn-list.json ```</Tab>
-</Tabs>
-
-### Manual
 
 <ComponentInstallation name="txn-list" />
 
@@ -47,14 +43,11 @@ export default function Example() {
 - **Loading States**: Built-in skeleton loading animation
 - **Empty States**: Graceful handling when no transactions are available
 - **Responsive Design**: Mobile-friendly table layout
-- **Real-time Data**: Supports live transaction data with connection hooks
 - **Time Formatting**: Human-readable relative time display
 - **Fee Display**: Properly formatted SOL fee amounts
 - **Address Truncation**: Shortened addresses for better readability
 
-## API Reference
-
-### Props
+## Props
 
 <TypeTable
   type={{
@@ -79,57 +72,19 @@ export default function Example() {
   }}
 />
 
-### Transaction Object
-
-The component expects transaction objects with the following structure:
-
-```tsx
-interface Transaction {
-  signature: string; // Transaction signature hash
-  block: number; // Block number
-  time: string; // Human-readable time (e.g., "2 mins ago")
-  sender: string; // Sender's public key
-  fee: number; // Transaction fee in SOL
-}
-```
-
-## Examples
-
-### Basic Usage
-
-```tsx
-<TxnList transactions={transactions} />
-```
-
-### With Loading State
-
-```tsx
-<TxnList loading={true} />
-```
-
-### With Click Handler
-
-```tsx
-<TxnList transactions={transactions} onClick={(txn) => console.log("Transaction clicked:", txn.signature)} />
-```
-
-### Custom Styling
-
-```tsx
-<TxnList transactions={transactions} className="border rounded-lg bg-muted/50" />
-```
-
 ## Dependencies
 
 This component requires the following dependencies:
 
-- `@solana/web3.js` - For Solana blockchain types and utilities
-- `@solana/wallet-adapter-react` - For wallet connection hooks
-- `date-fns` - For time formatting
-- `lucide-react` - For icons
+```json
+{
+  "@solana/web3.js": "^1.87.0",
+  "@solana/wallet-adapter-react": "^0.15.0",
+  "date-fns": "^2.30.0",
+  "lucide-react": "^0.263.0"
+}
+```
 
-## Credits
+---
 
-- Built with [shadcn/ui](https://ui.shadcn.com) components
-- Integrates with [Solscan](https://solscan.io) for transaction exploration
-- Uses [Solana Web3.js](https://solana-labs.github.io/solana-web3.js/) for blockchain interactions
+_Built with ❤️ for the Solana ecosystem. Contributions welcome!_
