--- a/src/content/docs/components/send-token.mdx
+++ b/src/content/docs/components/send-token.mdx
@@ -8,6 +8,10 @@ author:
 
 <ComponentPreview name="send-token-demo" />
 
+# Send Token
+
+A form component for sending SPL tokens on Solana with validation and transaction handling.
+
 ## Installation
 
 <ComponentInstallation name="send-token" />
@@ -56,40 +60,6 @@ export default function Example() {
       showTokenBalance
     />
   );
-}
-```
-
-### With Custom Validation
-
-```tsx
-import { SendTokenForm } from "@/components/soldevkit-ui/token/send-token";
-
-export default function ExampleWithValidation() {
-  return (
-    <SendTokenForm
-      onSendToken={handleSendToken}
-      tokens={tokens}
-      validateDestination={async (address) => {
-        // Custom validation logic
-        if (address.length < 32) {
-          return "Address too short";
-        }
-        return true;
-      }}
-    />
-  );
-}
-```
-
-### Loading State
-
-```tsx
-import { SendTokenForm } from "@/components/soldevkit-ui/token/send-token";
-
-export default function ExampleWithLoading() {
-  const [isProcessing, setIsProcessing] = useState(false);
-
-  return <SendTokenForm onSendToken={handleSendToken} tokens={tokens} isLoading={isProcessing} />;
 }
 ```
 
@@ -223,52 +193,19 @@ export default function ExampleWithLoading() {
   }}
 />
 
-## Validation
-
-The component includes built-in validation for:
-
-- **Destination Address**: Validates Solana public key format
-- **Amount**: Ensures positive numbers and respects token decimal precision
-- **Token Selection**: Requires a token to be selected
-
-### Custom Validation
-
-You can provide custom destination validation:
-
-```tsx
-const validateDestination = async (address: string) => {
-  // Return true for valid, false or error message for invalid
-  if (address.startsWith("invalid")) {
-    return "Invalid address format";
-  }
-  return true;
-};
-
-<SendTokenForm
-  validateDestination={validateDestination}
-  // ... other props
-/>;
-```
-
 ## Dependencies
 
-This component requires the following packages:
+```json
+{
+  "@solana/web3.js": "^1.87.0",
+  "@solana/wallet-adapter-react": "^0.15.0",
+  "@solana/spl-token": "^0.3.0",
+  "react-hook-form": "^7.0.0",
+  "sonner": "^1.0.0",
+  "lucide-react": "^0.400.0"
+}
+```
 
-- `@solana/web3.js`
-- `@solana/wallet-adapter-react`
-- `@solana/spl-token`
-- `@solana/spl-token-registry`
-- `react-hook-form`
-- `sonner`
-- `lucide-react`
+---
 
-Make sure your app is wrapped with the appropriate Solana wallet providers.
-
-## Notes
-
-- The component uses `react-hook-form` for form management and validation
-- Toast notifications are handled via `sonner` for user feedback
-- Requires a connected Solana wallet for transaction signing
-- Supports both SOL and SPL token transfers with automatic decimal handling
-- Token icons are displayed from the provided `icon` URL or a default Solana icon
-- Custom destination validation (`validateDestination`) is currently not applied to the built-in resolver. Built-in validation still runs.
+_Built with ❤️ for the Solana ecosystem. Contributions welcome!_
