github url updated.

--- a/src/content/docs/introduction.mdx
+++ b/src/content/docs/introduction.mdx
@@ -38,14 +38,14 @@ Forget about building everything from scratch. With SoldevKit UI, you can focus 
 
 Join our growing community to ask questions, share your projects, or just hang out with other Solana developers.
 
-- **GitHub:** [Discussions & Issues](https://github.com/satyawaniaman/soldevkit-ui/discussions)
-- **X (Twitter):** [Follow us @satyawaniaman](https://twitter.com/satyawaniaman)
+- **GitHub:** [Discussions & Issues](https://github.com/satyawaniaman/soldevkit/discussions)
+- **X (Twitter):** [Follow us @satyawaniaman](https://twitter.com/satyawani_aman)
 
 ### Contributing
 
 SoldevKit UI is a community project, and we welcome contributions of all kinds! Whether you're fixing a bug, adding a new component, or improving the documentation, your help is appreciated.
 
-Please read our **[Contribution Guidelines](https://github.com/satyawaniaman/soldevkit-ui/blob/main/CONTRIBUTING.md)** to get started.
+Please read our **[Contribution Guidelines](https://github.com/satyawaniaman/soldevkit/blob/main/CONTRIBUTING.md)** to get started.
 
 <Callout title="Ready to build?" type="info">
   Head over to the [CLI](/docs/CLI) page to get started with installation.
